2005-05-23 Magnus Hagdorn
 * glide_types.f90: change litho temp calculations to use 20 layers and
   a base at -5000m, allocate one extra element for sparse matrices
 * glide_mask.f90: set mask at margin
 * glide_lithot.f90: simplify sparse matrix setup with if statements since
   it's only calculated once, fix bugs in RHS
   potential BUG: I think there might be a factor of 2 missing somewhere,
   simple diffusion takes twice as long as I would expect...
 * test_lithot.f90: simple prog testing diffusion calcs
 * Makefile.am: hooked up test_lithot.f90

2005-05-20 Magnus Hagdorn
 * glide_lithot.f90: fixed bug calling CG solver, added routine for
   calculating geothermal heat flux
 * glide.f90: glide_lithot is loaded into module
 * simple_glide.f90: quick hack, need to initialise surf temps before
   lithosphere is initialised

2005-05-20 Magnus Hagdorn
 * glimmer_sparse.f90: new module for handling sparse matrices
 * Makefile.am: added glimmer_sparse.f90 to libglimmer sources
 * glide_vars.def: added litho temp
 * glide_types.f90: added sparse matrices and vectors for CG
 * glide_lithot.f90: calculate sparse matrix and hook up solver
   doesn't work yet
 * glide.f90: added lithot calculations

2005-05-18 Magnus Hagdorn
 * glide_types.f90: new type for thermal litho
 * glide_vars.def: add new dimension for layers of lithosphere
 * glide_nc_custom.f90: fill litho dimension
 * glide_setup.f90: make sigma layer calculating function public
 * glide_lithot.f90: new module for thermal diffu calculations of lithosphere
   currently, this just sets up the dimension variable
 * glide.f90: add init_lithot to initialisation routines
 * Makefile.am: add glide_lithot.f90 to glide sources

2005-05-18 Ian Rutt
 * Bug-fix changes to couple to Energy-balance mass-balance model

2005-05-17 Magnus Hagdorn
 * glide_types.f90: added variable basal heat flux
 * glide_vars.def: ditto
 * glide_temp.f90: replaced scalar geothermal heat flux with variable
   basal heat flux